test/spec_vectors/func/fail/module_41.wat
(module (func $type-return-last-num-vs-num (result i32) (return (i64.const 0))))